<resources>
    <string name="app_name">Address Book</string>
    <string name="add_contact">Add Contact</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="address">Address</string>
    <string name="save">Save</string>
    <string name="no_contacts">No Contacts</string>
    <string name="use_the_icon_to_add_a_new_contact">Use the \'+\' icon to add a new contact</string>
</resources>